[package]
name = "geojson"
description = "Library for serializing the GeoJSON vector GIS file format"
version = "0.22.2"
authors = ["The GeoRust Developers <mods@georust.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/geojson"
readme = "README.md"
documentation = "https://docs.rs/geojson/"
keywords = ["geojson", "gis", "json", "geo"]
edition = "2018"

[features]
async_graphql = ["async-graphql"]

[dependencies]
async-graphql = { version = "3.0", optional = true }
serde = "~1.0"
serde_json = "~1.0"
geo-types = { version = "0.7", optional = true }
thiserror = "1.0.20"

[dev-dependencies]
num-traits = "0.2"
criterion = "0.3"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "to_geo_types"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

